[UKM] Support --force-enable-metrics-reporting flag in iOS

Bug: 828878
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I76115730b550c8320e05c7c9fc1a20dd129f3626
Reviewed-on: https://chromium-review.googlesource.com/1012748
Commit-Queue: Moe Ahmadi <mahmadi@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551469}
Former-commit-id: aeb09c61a5735b99ac85b0b0c29a0d1ffa3a585c