chrome/browser/metrics/chrome_metrics_service_client.cc
@@ -72,6 +72,7 @@
 #include "components/metrics/metrics_service.h"
 #include "components/metrics/metrics_service_client.h"
 #include "components/metrics/metrics_state_manager.h"
+#include "components/metrics/metrics_switches.h"
 #include "components/metrics/net/cellular_logic_helper.h"
 #include "components/metrics/net/net_metrics_log_uploader.h"
 #include "components/metrics/net/network_metrics_provider.h"
@@ -568,7 +569,7 @@ ChromeMetricsServiceClient::GetMetricsReportingDefaultState() {
 // static
 bool ChromeMetricsServiceClient::IsMetricsReportingForceEnabled() {
   return base::CommandLine::ForCurrentProcess()->HasSwitch(
-      switches::kForceEnableMetricsReporting);
+      metrics::switches::kForceEnableMetricsReporting);
 }
 
 void ChromeMetricsServiceClient::Initialize() {
