ios/chrome/browser/metrics/ios_chrome_metrics_services_manager_client.mm
@@ -117,3 +117,7 @@ IOSChromeMetricsServicesManagerClient::GetMetricsStateManager() {
 bool IOSChromeMetricsServicesManagerClient::IsIncognitoSessionActive() {
   return TabModelList::IsOffTheRecordSessionActive();
 }
+
+bool IOSChromeMetricsServicesManagerClient::IsMetricsReportingForceEnabled() {
+  return IOSChromeMetricsServiceClient::IsMetricsReportingForceEnabled();
+}
